--- a/crates/eventify/Cargo.toml
+++ b/crates/eventify/Cargo.toml
@@ -18,7 +18,7 @@ name = "eventify"
 
 [dependencies]
 # internal
-eventify-core = { workspace = true, features = ["eth", "ws", "ipc", "http"] }
+eventify-core = { workspace = true, features = ["eth", "zksync", "starknet"] }
 eventify-http-server.workspace = true
 eventify-primitives.workspace = true
 
@@ -32,8 +32,6 @@ sqlx.workspace = true
 
 # eth
 alloy-primitives.workspace = true
-ethers-providers.workspace = true
-ethers-core.workspace = true
 
 # tracing
 tracing.workspace = true
