--- a/crates/eventify-core/Cargo.toml
+++ b/crates/eventify-core/Cargo.toml
@@ -48,6 +48,8 @@ url.workspace = true
 rayon = { version = "1.7.0", optional = true }
 jsonrpsee = { version = "0.21.0", features = ["full"]}
 serde_json.workspace = true
+eyre.workspace = true
+trait-variant.workspace = true
 
 [dev-dependencies]
 dotenv = "0.15.0"
