--- a/crates/eventify/Cargo.toml
+++ b/crates/eventify/Cargo.toml
@@ -42,7 +42,7 @@ num_cpus.workspace = true
 url.workspace = true
 secrecy.workspace = true
 thiserror.workspace = true
-eyre = "0.6.11"
+eyre.workspace = true
 
 [dev-dependencies]
 temp-env = "0.3.6"
