add stream from latest

--- a/crates/eventify-core/Cargo.toml
+++ b/crates/eventify-core/Cargo.toml
@@ -25,6 +25,7 @@ starknet = []
 [dependencies]
 # internal
 eventify-primitives.workspace = true
+eventify-configs.workspace = true
 
 # async
 futures.workspace = true
