--- a/crates/eventify/Cargo.toml
+++ b/crates/eventify/Cargo.toml
@@ -30,6 +30,7 @@ tokio.workspace = true
 # core
 clap = { workspace = true, features = ["derive", "env"] }
 sqlx.workspace = true
+redis.workspace = true
 
 # eth
 alloy-primitives.workspace = true
