--- a/crates/eventify-core/Cargo.toml
+++ b/crates/eventify-core/Cargo.toml
@@ -14,12 +14,16 @@ repository.workspace = true
 
 [features]
 default = [
-    "eth",
+    "eth", "propagate"
 ]
 
 # chain
 eth = []
 zksync = []
+
+#
+index = []
+propagate = []
 
 [dependencies]
 # internal
@@ -41,7 +45,7 @@ url.workspace = true
 eyre.workspace = true
 rayon = { version = "1.7.0", optional = true }
 jsonrpsee = { version = "0.21.0", features = ["full"]}
-reconnecting-jsonrpsee-ws-client = "0.2.0"
+alloy-sol-types = "0.6.2"
 
 [dev-dependencies]
 dotenv = "0.15.0"
