--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ redis = "0.24.0"
 
 # eth
 alloy-primitives = { version = "0.6.0", features = ["serde"] }
+alloy-sol-types = "0.6.2"
 
 # auxiliary
 clap = "4.3.12"
@@ -58,3 +59,4 @@ eyre = "0.6.11"
 trait-variant = "0.1.1"
 either = "1.9.0"
 toml = "0.8.9"
+reqwest = "0.11.24"
