--- a/crates/eventify-http-server/Cargo.toml
+++ b/crates/eventify-http-server/Cargo.toml
@@ -16,6 +16,7 @@ repository.workspace = true
 # internal
 eventify-primitives.workspace = true
 eventify-configs.workspace = true
+eventify-engine.workspace = true
 
 # core
 actix-web = "4.3.1"
@@ -41,7 +42,8 @@ num_cpus.workspace = true
 secrecy.workspace = true
 uuid.workspace = true
 tracing.workspace = true
-reqwest = "0.11.18"
+reqwest.workspace = true
+eyre.workspace = true
 
 [dev-dependencies]
 mockito = "1.2.0"
