--- a/crates/eventify-primitives/Cargo.toml
+++ b/crates/eventify-primitives/Cargo.toml
@@ -21,10 +21,13 @@ serde.workspace = true
 serde_json.workspace = true
 
 alloy-primitives.workspace = true
+alloy-sol-types.workspace = true
 clap.workspace = true
 tracing.workspace = true
 sqlx.workspace = true
 thiserror.workspace = true
 url.workspace = true
 utoipa.workspace = true
+eyre.workspace = true
 chrono = "0.4.31"
+redis.workspace = true
