--- a/etc/configs/stream-eth-logs.toml
+++ b/etc/configs/stream-eth-logs.toml
@@ -1,4 +1,4 @@
-collect = "blocks,logs"
+collect = "logs"
 queue_url = "redis://localhost:6379"
 database_url = "postgres://postgres:password@localhost:5432/eventify"
 
@@ -6,19 +6,10 @@ database_url = "postgres://postgres:password@localhost:5432/eventify"
 host = "0.0.0.0"
 port = 21420
 
-[mode]
-kind = "stream"
-
 [network]
     [network.eth]
+    #node_url = "wss://mainnet.infura.io/ws/v3/f3ca0098ac2c41a78af15eab2c163492"
     node_url = "wss://eth.llamarpc.com"
 
     #[network.zksync]
     #node_url = "wss://mainnet.era.zksync.io/ws"
-
-#[platform]
-#    [platform.discord]
-#    token = "discord_token"
-#
-#    [platform.slack]
-#    token = "slack_token"
