--- a/etc/configs/stream-eth-all.toml
+++ b/etc/configs/stream-eth-all.toml
@@ -1,7 +1,6 @@
-collect = "blocks,txs,logs"
+collect = "blocks,logs"
 queue_url = "redis://localhost:6379"
 database_url = "postgres://postgres:password@localhost:5432/eventify"
-notify = true
 
 [server]
 host = "0.0.0.0"
@@ -10,6 +9,3 @@ port = 21420
 [network]
     [network.eth]
     node_url = "wss://eth.llamarpc.com"
-
-    [network.zksync]
-    node_url = "wss://mainnet.era.zksync.io/ws"
