--- a/etc/configs/stream-eth-blocks.toml
+++ b/etc/configs/stream-eth-blocks.toml
@@ -1,7 +1,6 @@
-collect = "logs"
+collect = "blocks"
 queue_url = "redis://localhost:6379"
 database_url = "postgres://postgres:password@localhost:5432/eventify"
-notify = false
 
 [server]
 host = "0.0.0.0"
@@ -11,6 +10,3 @@ port = 21420
     [network.eth]
     #node_url = "wss://mainnet.infura.io/ws/v3/f3ca0098ac2c41a78af15eab2c163492"
     node_url = "wss://eth.llamarpc.com"
-
-    #[network.zksync]
-    #node_url = "wss://mainnet.era.zksync.io/ws"
