--- a/crates/eventify-core/Cargo.toml
+++ b/crates/eventify-core/Cargo.toml
@@ -34,7 +34,6 @@ futures.workspace = true
 tokio.workspace = true
 serde.workspace = true
 serde-aux.workspace = true
-serde_derive.workspace = true
 serde_json.workspace = true
 sqlx.workspace = true
 redis.workspace = true
@@ -44,10 +43,10 @@ thiserror.workspace = true
 url.workspace = true
 eyre.workspace = true
 rayon = { version = "1.7.0", optional = true }
-jsonrpsee = { version = "0.21.0", features = ["full"]}
 alloy-sol-types = "0.6.2"
+reconnecting-jsonrpsee-ws-client = "0.3.0"
 
 [dev-dependencies]
-dotenv = "0.15.0"
+dotenvy = "0.15.7"
 serde_json.workspace = true
 uuid.workspace = true
