--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ serde = "1.0.171"
 serde-aux = "4.2.0"
 serde_json = "1.0.104"
 sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "chrono"] }
-redis = "0.24.0"
+redis = { version = "0.24.0", features = ["tokio-comp", "aio"] }
 
 # eth
 alloy-primitives = { version = "0.6.0", features = ["serde"] }
