--- a/crates/eventify-primitives/Cargo.toml
+++ b/crates/eventify-primitives/Cargo.toml
@@ -30,3 +30,7 @@ utoipa.workspace = true
 eyre.workspace = true
 chrono = "0.4.31"
 redis.workspace = true
+
+[dev-dependencies]
+dotenvy = "0.15.7"
+uuid.workspace = true
